Fixed accessibility issues with font visibility.

--- a/animeCountdownApp/src/app/header/header.component.css
+++ b/animeCountdownApp/src/app/header/header.component.css
@@ -106,6 +106,9 @@
     margin: 0;
     padding: 0;
   }
+
+  
+
   .profile-dropdown {
     position: absolute;
     right: 0;
@@ -114,11 +117,6 @@
 
   @media screen and (max-width: 900px) {
     .header:has(.search-input:focus) .profile,  .header:has(.search-input:focus) .notification{
-      position: relative;
-      border-radius: 100px;
-      overflow: hidden;
-      margin: 0;
-      padding: 0;
       display: none;
     }
 
@@ -131,14 +129,8 @@
     .header {
       width: 100%;
       border-radius: 10px;
-      opacity: 0.9;
     }
     .header:has(.search-input:focus) .profile,  .header:has(.search-input:focus) .notification{
-      position: relative;
-      border-radius: 100px;
-      overflow: hidden;
-      margin: 0;
-      padding: 0;
       display: none;
     }
   
