--- a/animeCountdownApp/src/styles.scss
+++ b/animeCountdownApp/src/styles.scss
@@ -4,7 +4,7 @@
     /* Color variables */
     --bg-dark: #101116;
     --bg-card: #1F2833;
-    --text-primary: #C5C6C7;
+    --text-primary: #e3e3e3;
     --accent: #00a6fb;
     --border: rgba(102, 252, 241, 0.1);
   
@@ -27,13 +27,10 @@
   ));
 }
 
-
-
 body {
   background-color: var(--bg-dark);
   color: var(--text-primary);
   font-family: var(--font-main);
-  margin: 0 auto;
   overflow-x: hidden;
   max-width: var(--container-width);
   padding: 0 var(--spacing-md);
@@ -80,7 +77,7 @@ body {
 /* Mobile */
 @media screen and (max-width: 600px) {
   body {
-    padding: 0 var(--spacing-md);
+    padding: 0;
     max-width: 100%;
   }
 
